# rules_rust

./: .bazelignore  .bazelrc  .gitattributes  .gitignore  .pre-commit-config.yaml  BUILD  BUILD.bazel  COMPATIBILITY.md  CONTRIBUTING.md  CONTRIBUTORS  Dockerfile  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bazel  bootstrap.sh  build_docker.sh  cargo.html  cargo_settings.html  crate_universe.html  crate_universe_bzlmod.html  crate_universe_workspace.html  debug.sh  default_14462134455468369255_0_83170.profraw  index.html  print.html  rust.html  rust_analyzer.html  rust_bindgen.html  rust_bzlmod.html  rust_clippy.html  rust_doc.html  rust_fmt.html  rust_repositories.html  rust_settings.html  rust_toolchains.html  rust_wasm_bindgen.html  searchindex.js  searchindex.json  toc.html  (+3 more)
bindgen/: BUILD  BUILD.bazel  README.md  bindgen.bzl  extension.bzl  local_linux.BUILD  repositories.bzl  transitive_repositories.bzl
bindgen/private/: BUILD.bazel  bindgen.bzl
bindgen/raze/: BUILD.bazel  Cargo.toml  crates.bzl  libloading.BUILD
bzlmod/: BUILD.bazel
bzlmod/hello_world/: BUILD.bazel  MODULE.bazel  hello_world_test.sh
cargo/: BUILD  BUILD.bazel  cargo_bootstrap.bzl  cargo_build_script.bzl  cargo_environ.bzl  defs.bzl  deps.bzl  repositories.bzl  repositories_bin.bzl  workspace.bzl
cargo/bootstrap/: BUILD.bazel
cargo/cargo_build_script_runner/: BUILD  BUILD.bazel  bin.rs  lib.rs
cargo/cargo_raze/: BUILD.bazel  Cargo.toml  repositories.bzl  transitive_deps.bzl
cargo/cargo_toml_info/: BUILD.bazel  main.rs
cargo/cargo_toml_variable_extractor/: main.rs
cargo/crate_universe_resolver/: Cargo.toml
cargo/private/: BUILD.bazel  cargo_bootstrap.bzl  cargo_build_info.bzl  cargo_build_info_runner.rs  cargo_build_info_wrapper.bzl  cargo_build_script.bzl  cargo_build_script_wrapper.bzl  cargo_lints.bzl  cargo_toml_env_vars.bzl  cargo_utils.bzl  internal_extensions.bzl  no_binary.rs  runfiles_enabled.bzl
cargo/settings/: BUILD.bazel  settings.bzl
docs/: BUILD  BUILD.bazel  MODULE.bazel  WORKSPACE  WORKSPACE.bazel  all.bzl  cargo.md  cargo_build_script.md  crate_universe.md  crate_universe_bzlmod.md  defs.md  docs_deps.bzl  docs_extra_deps.bzl  docs_repositories.bzl  flatten.md  index.md  page.bzl  providers.md  rust_analyzer.md  rust_analyzer.vm  rust_bindgen.md  rust_clippy.md  rust_clippy.vm  rust_doc.md  rust_fmt.md  rust_fmt.vm  rust_proto.md  rust_repositories.md  rust_test_output_path_uniqueness.md  rust_wasm.md  rust_wasm_bindgen.md  rust_wasm_bindgen.vm  settings.md  symbols.bzl  test_docs.sh
docs/src/: SUMMARY.md  cargo.md  coverage.md  crate_universe.md  crate_universe_bzlmod.md  extensions.md  flatten.md  index.md  rules.md  rust.md  rust_analyzer.md  rust_bindgen.md  rust_clippy.md  rust_fmt.md  rust_prost.md  rust_proto.md  rust_protobuf.md  rust_repositories.md  rust_settings.md  rust_wasm_bindgen.md
examples/all_crate_deps/: Cargo.toml  MODULE.bazel
examples/bindgen_toolchain/: BUILD.bazel  MODULE.bazel
examples/cargo_raze/: BUILD.bazel  repositories.bzl  transitive_deps.bzl
examples/cbindgen_toolchain/: BUILD.bazel  MODULE.bazel  README.md
examples/crate_universe_bzlmod/: .bazelrc  MODULE.bazel  README.md
examples/crate_universe_local_path/: BUILD.bazel  MODULE.bazel  WORKSPACE.bazel  vendor_edit_test.sh  vendor_lazy_static.sh
examples/cross_compile_musl/: MODULE.bazel  WORKSPACE.bazel
examples/hello_world/: BUILD  BUILD.bazel  MODULE.bazel
examples/import/: BUILD.bazel  mod2.rs  mod4.rs
examples/ios/: .bazelrc  BUILD.bazel  MODULE.bazel  WORKSPACE.bazel  platform_mappings
examples/lttng_ust_rs/: BUILD.bazel  Cargo.toml  MODULE.bazel  build.rs
extensions/: BUILD.bazel  MODULE.bazel  WORKSPACE.bazel  WORKSPACE.bzlmod  extensions.bzl
extensions/bindgen/: .bazelignore  BUILD.bazel  MODULE.bazel  defs.bzl  extensions.bzl  repositories.bzl
extensions/cbindgen/: .bazelignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bazel  defs.bzl  extensions.bzl
extensions/mdbook/: MODULE.bazel  defs.bzl  extensions.bzl  repositories_transitive.bzl
extensions/prost/: .bazelignore  BUILD.bazel  MODULE.bazel  defs.bzl  extensions.bzl  repositories.bzl
extensions/protobuf/: .bazelignore  .bazelrc  BUILD.bazel  MODULE.bazel  defs.bzl  dev.bazelrc  proto.bzl  repositories.bzl  toolchain.bzl  transitive_repositories.bzl
extensions/pyo3/: .bazelrc  BUILD.bazel  MODULE.bazel  version.bzl
extensions/wasm_bindgen/: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  DEVELOPMENT.md  MODULE.bazel  defs.bzl  extensions.bzl  repositories.bzl
proto/: BUILD  BUILD.bazel  README.md  proto.bzl  repositories.bzl  toolchain.bzl
proto/prost/: BUILD.bazel  repositories.bzl
proto/protobuf/: BUILD.bazel  legacy_proto_toolchain.bzl  proto.bzl  repositories.bzl  toolchain.bzl  transitive_repositories.bzl
rust/: BUILD  BUILD.bazel  defs.bzl  doc_server.template.py  extensions.bzl  known_shas.bzl  nightly_versions.bzl  repositories.bzl  rust.bzl  rust_common.bzl  rust_proc_macro.bzl  rustc.bzl  toolchain.bzl  toolchain_repositories.bzl
rust/platform/: BUILD  BUILD.bazel  platform.bzl  triple.bzl  triple_mappings.bzl
rust/private/: BUILD  BUILD.bazel  README.md  captured_output_test_runner.cc  clippy.bzl  common.bzl  debug_info.bzl  exec_settings_trim.bzl  extensions.bzl  incremental.bzl  internal_extensions.bzl  legacy_cc_starlark_api_shim.bzl  lint_test.bzl  lints.bzl  lto.bzl  miri.bzl  miri_config.bzl  opt_level.bzl  per_crate_flag_trim.bzl  providers.bzl  repositories.bzl  repository_utils.bzl  rust.bzl  rust_allocator_libraries.bzl  rust_analyzer.bzl  rust_proc_macro.bzl  rust_proc_macro_inner.bzl  rust_toolchain_toml.bzl  rustc.bzl  rustc_resource_set.bzl  rustdoc.bzl  rustdoc_test.bzl  rustfmt.bzl  stamp.bzl  strip_level.bzl  system_rust_configure.bzl  test_runner_template.rs  test_sharding_wrapper.bat  test_sharding_wrapper.sh  toolchain.bzl  (+6 more)
rust/runfiles/: BUILD.bazel  Cargo.toml  runfiles.rs
util/: BUILD.bazel  collect_coverage.sh  fetch_shas.sh  release.sh  repin_all.sh
wasm/: BUILD.bazel  README.md  repositories.bzl  wasm_bindgen.bzl
(+2956 files in other folders)
