load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load(
    "//rust:defs.bzl",
    "error_format",
    "experimental_incremental_base",
    "experimental_incremental_prefixes",
)

exports_files(["LICENSE"])

bzl_library(
    name = "rules",
    srcs = [
        ":workspace.bzl",
    ],
    visibility = ["//visibility:public"],
)

# This setting may be changed from the command line to generate machine readable errors.
error_format(
    name = "error_format",
    build_setting_default = "human",
    visibility = ["//visibility:public"],
)

# Optional incremental compilation - see docs/index.md
experimental_incremental_base(
    name = "experimental_incremental_base",
    build_setting_default = "",
    visibility = ["//visibility:public"],
)

experimental_incremental_prefixes(
    name = "experimental_incremental_prefixes",
    build_setting_default = "//,-//vendored//",
    visibility = ["//visibility:public"],
)
