load("@bazel_binaries//:defs.bzl", "bazel_binaries")
load(
    "@rules_bazel_integration_test//bazel_integration_test:defs.bzl",
    "bazel_integration_test",
    "default_test_runner",
    "integration_test_utils",
)

# Include the hello_world workspace along with the files in this directory.
filegroup(
    name = "all_files",
    # Include the workspace directory and its children
    srcs = glob(["**"]),
    visibility = ["//:__subpackages__"],
)

default_test_runner(name = "default_test_runner")

# This test exists to be run as part of the BCR presubmit.
bazel_integration_test(
    name = "hello_world_test",
    bazel_binaries = bazel_binaries,
    bazel_version = bazel_binaries.versions.current,
    tags = integration_test_utils.DEFAULT_INTEGRATION_TEST_TAGS + [
        # Avoid file permssion error when using disk and repository cache after
        # 7.0.0rc2 upgrade.
        # https://github.com/bazelbuild/bazel/issues/19908
        "no-sandbox",
    ],
    test_runner = ":default_test_runner",
    visibility = ["//:__subpackages__"],
    workspace_files = integration_test_utils.glob_workspace_files("hello_world") + [
        "//:runtime_files",
    ],
    workspace_path = "hello_world",
)
