workspace(name = "rules_rust_docs")

local_repository(
    name = "rules_rust",
    path = "..",
)

load("@rules_rust//rust:repositories.bzl", "rules_rust_dependencies", "rust_register_toolchains")

rules_rust_dependencies()

rust_register_toolchains()

load("@rules_rust//crate_universe:repositories.bzl", "crate_universe_dependencies")

crate_universe_dependencies()

local_repository(
    name = "rules_rust_ext",
    path = "../extensions",
)

load("@rules_rust_ext//prost:repositories.bzl", "rust_prost_dependencies")

rust_prost_dependencies()

load("@rules_rust_ext//prost:transitive_repositories.bzl", "rust_prost_transitive_repositories")

rust_prost_transitive_repositories()

load("@rules_rust_ext//protobuf:repositories.bzl", "rust_proto_protobuf_dependencies")

rust_proto_protobuf_dependencies()

load(
    "@rules_rust_ext//wasm_bindgen:repositories.bzl",
    "rust_wasm_bindgen_dependencies",
    "rust_wasm_bindgen_register_toolchains",
)

rust_wasm_bindgen_dependencies()

rust_wasm_bindgen_register_toolchains()

load("@rules_rust_ext//wasm_bindgen/rules_js:repositories.bzl", "js_rust_wasm_bindgen_dependencies")

js_rust_wasm_bindgen_dependencies()

load("@rules_rust_ext//wasm_bindgen/rules_nodejs:repositories.bzl", "nodejs_rust_wasm_bindgen_dependencies")

nodejs_rust_wasm_bindgen_dependencies()
