"""bazelbuild/rules_rust/extensions"""

module(
    name = "rules_rust_ext",
    version = "0.54.1",
)

bazel_dep(
    name = "rules_rust",
    version = "0.54.1",
)
local_path_override(
    module_name = "rules_rust",
    path = "../..",
)

bazel_dep(
    name = "bazel_skylib",
    version = "1.5.0",
)
bazel_dep(
    name = "rules_cc",
    version = "0.0.9",
)
bazel_dep(
    name = "rules_proto",
    version = "6.0.2",
)
bazel_dep(
    name = "protobuf",
    version = "21.7",
    repo_name = "com_google_protobuf",
)
bazel_dep(
    name = "aspect_rules_js",
    version = "1.39.0",
)
bazel_dep(
    name = "rules_nodejs",
    version = "5.8.5",
)

rust_ext = use_extension("//:extensions.bzl", "rust_ext")
use_repo(
    rust_ext,
    "llvm-raw",
    "rules_rust_bindgen__bindgen-0.70.1",
    "rules_rust_bindgen__bindgen-cli-0.70.1",
    "rules_rust_bindgen__clang-sys-1.8.1",
    "rules_rust_bindgen__clap-4.5.17",
    "rules_rust_bindgen__clap_complete-4.5.26",
    "rules_rust_bindgen__env_logger-0.10.2",
    "rules_rust_prost",
    "rules_rust_prost__h2-0.4.6",
    "rules_rust_prost__heck",
    "rules_rust_prost__prost-0.13.1",
    "rules_rust_prost__prost-types-0.13.1",
    "rules_rust_prost__protoc-gen-prost-0.4.0",
    "rules_rust_prost__protoc-gen-tonic-0.4.1",
    "rules_rust_prost__tokio-1.39.3",
    "rules_rust_prost__tokio-stream-0.1.15",
    "rules_rust_prost__tonic-0.12.1",
    "rules_rust_proto__grpc-0.6.2",
    "rules_rust_proto__grpc-compiler-0.6.2",
    "rules_rust_proto__log-0.4.17",
    "rules_rust_proto__protobuf-2.8.2",
    "rules_rust_proto__protobuf-codegen-2.8.2",
    "rules_rust_proto__tls-api-0.1.22",
    "rules_rust_proto__tls-api-stub-0.1.22",
    "rules_rust_wasm_bindgen__anyhow-1.0.71",
    "rules_rust_wasm_bindgen__assert_cmd-1.0.8",
    "rules_rust_wasm_bindgen__diff-0.1.13",
    "rules_rust_wasm_bindgen__docopt-1.1.1",
    "rules_rust_wasm_bindgen__env_logger-0.8.4",
    "rules_rust_wasm_bindgen__log-0.4.19",
    "rules_rust_wasm_bindgen__predicates-1.0.8",
    "rules_rust_wasm_bindgen__rayon-1.7.0",
    "rules_rust_wasm_bindgen__rouille-3.6.2",
    "rules_rust_wasm_bindgen__serde-1.0.171",
    "rules_rust_wasm_bindgen__serde_derive-1.0.171",
    "rules_rust_wasm_bindgen__serde_json-1.0.102",
    "rules_rust_wasm_bindgen__tempfile-3.6.0",
    "rules_rust_wasm_bindgen__ureq-2.8.0",
    "rules_rust_wasm_bindgen__walrus-0.20.3",
    "rules_rust_wasm_bindgen__wasm-bindgen-0.2.92",
    "rules_rust_wasm_bindgen__wasm-bindgen-cli-support-0.2.92",
    "rules_rust_wasm_bindgen__wasm-bindgen-shared-0.2.92",
    "rules_rust_wasm_bindgen__wasmparser-0.102.0",
    "rules_rust_wasm_bindgen__wasmprinter-0.2.60",
    "rules_rust_wasm_bindgen_cli",
)

register_toolchains(
    "//bindgen:default_bindgen_toolchain",
    "//prost:default_prost_toolchain",
    "//protobuf:default-proto-toolchain",
)
