load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "bzl_lib",
    visibility = ["//visibility:public"],
    deps = [
        "//proto/prost:bzl_lib",
        "//proto/protobuf:bzl_lib",
    ],
)

filegroup(
    name = "all_files",
    srcs = glob(["*"]),
    visibility = ["//:__subpackages__"],
)
