sh_binary(
    name = "fetch_shas",
    srcs = ["fetch_shas.sh"],
    tags = ["manual"],
)

alias(
    name = "collect_coverage",
    actual = "//util/collect_coverage",
    visibility = ["//visibility:public"],
)

filegroup(
    name = "all_files",
    srcs = glob(["*"]),
    visibility = ["//:__subpackages__"],
)
