package(default_visibility = ["//visibility:public"])

alias(
    name = "bindgen",
    actual = "//bindgen/3rdparty/crates:bindgen",
    deprecation = "instead use `@rules_rust//bindgen/3rdparty/crates:bindgen`",
    tags = [
        "manual",
    ],
)

alias(
    name = "cargo_bin_bindgen",
    actual = "//bindgen/3rdparty:bindgen",
    deprecation = "instead use `@rules_rust//bindgen/3rdparty:bindgen`",
    tags = [
        "manual",
    ],
)

alias(
    name = "libloading",
    actual = "//bindgen/3rdparty/crates:libloading",
    deprecation = "instead use `@rules_rust//bindgen/3rdparty/crates:libloading`",
    tags = [
        "manual",
    ],
)

filegroup(
    name = "distro",
    srcs = [
        "BUILD.bazel",
    ],
    visibility = ["//bindgen:__pkg__"],
)
