[raze]
genmode = "Remote"
workspace_path = "//bindgen/raze"

[dependencies]
# TODO: 47 requires changes
bindgen = "0.40.0"

[raze.crates.bindgen.'0.40.0']
gen_buildrs = true
extra_aliased_targets = ["cargo_bin_bindgen"]

[raze.crates.clang-sys.'0.23.0']
# gen_buildrs = true

# TODO: https://github.com/google/cargo-raze/issues/58

[package]
name = "fake_lib"
version = "0.0.1"

[lib]
path = "fake_lib.rs"
