load("//rust:defs.bzl", "rust_binary", "rust_library", "rust_test")

rust_library(
    name = "cargo_build_script_output_parser",
    crate_name = "cargo_build_script_output_parser",
    srcs = ["lib.rs"],
)

rust_test(
    name = "test",
    crate = ":cargo_build_script_output_parser",
)

rust_binary(
    name = "cargo_build_script_runner",
    visibility = ["//visibility:public"],
    crate_name = "cargo_build_script_runner",
    srcs = ["bin.rs"],
    deps = [":cargo_build_script_output_parser"],
)

rust_test(
    name = "bin_test",
    crate = ":cargo_build_script_runner",
    deps = [":cargo_build_script_runner"],
)
