[workspace]
[package]
name = "all_crate_deps"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
path = "fake.rs"

[dependencies]
# Fetched via git to test that git dependencies are converted to http_archive in MODULE.bazel.lock
anyhow = { git = "https://github.com/dtolnay/anyhow.git", rev = "709fe86f04878a62a29b9279f5bb96422f8bca28" }
