"""
Contains crate_universe usage example dependencies
"""

bazel_dep(name = "rules_rust", version = "0.54.1")
local_path_override(
    module_name = "rules_rust",
    path = "../..",
)

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(edition = "2021")
use_repo(
    rust,
    "rust_toolchains",
)

register_toolchains("@rust_toolchains//:all")

###############################################################################
# A L I A S   R U L E
###############################################################################

include("//alias_rule:sub.MODULE.bazel")
