load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_doc")

package(default_visibility = ["//visibility:public"])

rust_binary(
    name = "hello_world",
    srcs = ["src/main.rs"],
    proc_macro_deps = [
        "@rules_rust//util/import",
    ],
    deps = ["@examples//hello_lib"],
)

rust_doc(
    name = "hello_world_doc",
    crate = ":hello_world",
)
